--- a/app/src/main/res/layout-sw600dp/item_recipes_list_database.xml
+++ b/app/src/main/res/layout-sw600dp/item_recipes_list_database.xml
@@ -169,8 +169,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
             tools:text="Lundi djskjskj sksjkjskjsd kkjsdkjskdjs skskdkjkjds kjskj sksjkjskjsd kkjsdkjskdjs skskdkjkjds kjskj sksjkjskjsd kkjsdkjskdjs skskdkjkjds"
-            app:layout_constraintEnd_toStartOf="@id/select_date_button"
+            app:layout_constraintEnd_toStartOf="@id/owner_image"
             android:maxLines="2"
+            android:layout_marginEnd="10dp"
             android:ellipsize="end"
             android:maxLength="200"
             app:layout_constraintStart_toStartOf="@id/title"
@@ -178,13 +179,14 @@
 
         <ImageButton
             android:id="@+id/select_date_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/ic_baseline_calendar_today_24"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:layout_constraintRight_toRightOf="@id/view"
+            app:layout_constraintStart_toStartOf="@id/owner_image"
+            app:layout_constraintEnd_toEndOf="@id/owner_image"
             app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintBottom_toTopOf="@id/view"/>
 
