--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -153,7 +153,7 @@
     </fragment>
 
     <fragment android:id="@+id/fragment_calendar"
-        android:name="com.inved.freezdge.favourites.ui.CalendarFragment"
+        android:name="com.inved.freezdge.schedule.ui.CalendarFragment"
         android:label="Freezdge"
         tools:layout="@layout/fragment_calendar">
 
