--- a/app/src/main/res/layout-sw600dp/item_recipes_list_database.xml
+++ b/app/src/main/res/layout-sw600dp/item_recipes_list_database.xml
@@ -177,6 +177,17 @@
             app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/title" />
 
+        <ImageView
+            android:id="@+id/check_schedule_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:layout_constraintBottom_toBottomOf="@id/select_date_button"
+            app:layout_constraintStart_toStartOf="@id/select_date_button"
+            app:layout_constraintEnd_toEndOf="@id/select_date_button"
+            android:src="@drawable/ic_check_white_24dp"
+            app:tint="@color/colorGreen"
+            android:visibility="invisible"/>
+
         <ImageButton
             android:id="@+id/select_date_button"
             android:layout_width="40dp"
