--- a/app/src/main/res/layout/item_detail_recipe.xml
+++ b/app/src/main/res/layout/item_detail_recipe.xml
@@ -59,13 +59,14 @@
 
     <ImageView
         android:id="@+id/activity_recipe_detail_time_image"
-        app:layout_constraintRight_toLeftOf="@+id/activity_recipe_detail_number_person_image"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/activity_recipe_detail_cook_time_image"
         app:layout_constraintTop_toBottomOf="@id/activity_recipe_total_time"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:srcCompat="@drawable/ic_detail_timer_black_24dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="70dp"
         android:contentDescription="@string/description_image" />
 
     <TextView
@@ -77,20 +78,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:text="@string/recipe_detail_item_detail_time"
+        android:text="@string/recipe_detail_item_detail_prep_time"
         android:textColor="@color/colorGrey"
         android:textSize="11sp"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/activity_recipe_detail_number_person_image"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/activity_recipe_detail_cook_time_image"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activity_recipe_total_time"
+        app:layout_constraintTop_toTopOf="@id/activity_recipe_detail_time_image"
         app:srcCompat="@drawable/ic_detail_number_person_24dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="25dp"
         android:contentDescription="@string/description_image" />
 
     <TextView
@@ -108,26 +108,25 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/activity_recipe_detail_kcal_image"
-        app:layout_constraintLeft_toRightOf="@+id/activity_recipe_detail_number_person_image"
-        app:layout_constraintTop_toBottomOf="@id/activity_recipe_total_time"
-        app:srcCompat="@drawable/ic_detail_kcal_24dp"
+        android:id="@+id/activity_recipe_detail_cook_time_image"
+        app:layout_constraintLeft_toRightOf="@id/activity_recipe_detail_time_image"
+        app:layout_constraintRight_toLeftOf="@id/activity_recipe_detail_number_person_image"
+        app:layout_constraintTop_toTopOf="@id/activity_recipe_detail_time_image"
+        app:srcCompat="@drawable/ic_cooking"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="25dp"
         android:contentDescription="@string/description_image" />
 
     <TextView
-        android:id="@+id/activity_recipe_detail_kcal_image_text"
-        app:layout_constraintLeft_toLeftOf="@id/activity_recipe_detail_kcal_image"
-        app:layout_constraintRight_toRightOf="@id/activity_recipe_detail_kcal_image"
-        app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_kcal_image"
+        android:id="@+id/activity_recipe_detail_cook_time_image_text"
+        app:layout_constraintLeft_toLeftOf="@id/activity_recipe_detail_cook_time_image"
+        app:layout_constraintRight_toRightOf="@id/activity_recipe_detail_cook_time_image"
+        app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_cook_time_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:text="@string/recipe_detail_item_kcal"
+        android:text="@string/recipe_detail_item_detail_cook_time"
         android:textColor="@color/colorGrey"
         android:textSize="11sp"
         android:textStyle="bold" />
