--- a/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
+++ b/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
@@ -183,10 +183,21 @@
             app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/title" />
 
+        <ImageView
+            android:id="@+id/check_schedule_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:layout_constraintBottom_toBottomOf="@id/select_date_button"
+            app:layout_constraintStart_toStartOf="@id/select_date_button"
+            app:layout_constraintEnd_toEndOf="@id/select_date_button"
+            android:src="@drawable/ic_check_white_24dp"
+            android:visibility="invisible"
+            app:tint="@color/colorGreen" />
+
         <ImageButton
             android:id="@+id/select_date_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/ic_baseline_calendar_today_24"
