feature : fox bugs with favorites posts and ingredients search, and not_found margin

--- a/app/src/main/res/layout/activity_my_grocery_list.xml
+++ b/app/src/main/res/layout/activity_my_grocery_list.xml
@@ -12,6 +12,8 @@
         android:id="@+id/not_found"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_gravity="center"
         android:gravity="center"
         tools:text="TBL: GROCERY"
