--- a/app/src/main/res/layout-sw600dp/fragment_my_ingredients_list.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_my_ingredients_list.xml
@@ -22,6 +22,8 @@
         android:id="@+id/not_found"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_gravity="center"
         tools:text="TBL: INGREDIENTS"
         android:visibility="gone"
