--- a/app/src/main/res/layout/fragment_all_recipes.xml
+++ b/app/src/main/res/layout/fragment_all_recipes.xml
@@ -28,6 +28,8 @@
         android:id="@+id/not_found"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         tools:text="TBL: ALL RECIPES"
         android:visibility="visible"
         android:gravity="center"/>
