--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -26,6 +26,8 @@
         android:id="@+id/not_found"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         tools:text="TBL: MY RECIPES"
         android:visibility="gone"
         android:gravity="center"
