--- a/app/src/main/res/layout/fragment_social_liked_post.xml
+++ b/app/src/main/res/layout/fragment_social_liked_post.xml
@@ -17,6 +17,8 @@
         android:id="@+id/not_found"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
