--- a/app/src/main/res/layout/dialog_select_day.xml
+++ b/app/src/main/res/layout/dialog_select_day.xml
@@ -49,19 +49,21 @@
                 app:layout_constraintLeft_toRightOf="@id/close_button"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
+            <Button
                 android:id="@+id/validate_button"
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="@dimen/default_large_margin"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:text="@string/day_ok_dialog"
                 android:textAllCaps="true"
                 android:textColor="@color/black_three"
                 android:textSize="17sp"
+                android:clickable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:focusable="true" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
