feature : add ingredients photo and can manage add in ingredient list from grocery list dialog

--- a/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
+++ b/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
@@ -112,6 +112,7 @@
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:layout_marginTop="10dp"
+            android:elevation="2dp"
             app:layout_constraintRight_toRightOf="@id/fragment_recipes_list_item_matching"
             app:layout_constraintLeft_toLeftOf="@id/fragment_recipes_list_item_matching"
             app:layout_constraintTop_toTopOf="@id/view"
