--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,19 +16,20 @@
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/linearlayout"
+        android:layout_marginBottom="10dp"
         android:textSize="@dimen/default_title_size"
-        android:layout_marginTop="@dimen/default_large_margin"
         android:textStyle="bold" />
 
 
     <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nav_header_app_name"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="15dp"
         android:gravity="start">
 
         <ImageView
@@ -46,7 +47,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
-            tools:text="@string/firstname"
+            tools:text="Salut Alexandra"
             android:textColor="@color/black_three"
             android:layout_marginStart="@dimen/default_large_margin"
             app:layout_constrainedWidth="true"/>
