--- a/app/src/main/res/layout-sw600dp/item_recipes_list_database.xml
+++ b/app/src/main/res/layout-sw600dp/item_recipes_list_database.xml
@@ -108,6 +108,7 @@
             android:layout_height="48dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
+            android:background="@drawable/shadow"
             android:elevation="2dp"
             android:layout_marginTop="@dimen/default_margin"
             app:layout_constraintRight_toRightOf="@id/view"
