--- a/app/src/main/res/layout/item_detail_recipe.xml
+++ b/app/src/main/res/layout/item_detail_recipe.xml
@@ -26,6 +26,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_photo"
         app:srcCompat="@drawable/ic_search_black_24dp"
+        android:background="@drawable/shadow"
+        android:elevation="2dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="15dp"
