--- a/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
+++ b/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
@@ -15,7 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp">
+        >
 
 
         <ImageView
@@ -112,10 +112,13 @@
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:layout_marginTop="10dp"
+            android:background="@drawable/shadow"
             android:elevation="2dp"
             app:layout_constraintRight_toRightOf="@id/fragment_recipes_list_item_matching"
             app:layout_constraintLeft_toLeftOf="@id/fragment_recipes_list_item_matching"
             app:layout_constraintTop_toTopOf="@id/view"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:contentDescription="@string/description_image"/>
 
         <TextView
