--- a/app/src/main/res/layout-sw600dp/item_recipes_list_database.xml
+++ b/app/src/main/res/layout-sw600dp/item_recipes_list_database.xml
@@ -48,7 +48,7 @@
             android:textSize="22sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image"
-            app:layout_constraintRight_toLeftOf="@id/fragment_recipes_list_item_matching"/>
+            app:layout_constraintRight_toLeftOf="@id/select_date_button"/>
 
 
         <TextView
@@ -90,8 +90,8 @@
 
         <ImageView
             android:id="@+id/favorite_image"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:adjustViewBounds="true"
             android:background="@drawable/state_favorite"
             android:scaleType="fitCenter"
@@ -104,14 +104,15 @@
 
         <ImageView
             android:id="@+id/owner_image"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:background="@drawable/shadow"
             android:elevation="2dp"
             android:layout_marginTop="@dimen/default_margin"
-            app:layout_constraintRight_toRightOf="@id/view"
+            android:layout_marginEnd="@dimen/default_margin"
+            app:layout_constraintRight_toRightOf="@id/guideline"
             app:layout_constraintTop_toTopOf="@id/view"
             android:contentDescription="@string/description_image"/>
 
@@ -172,6 +173,7 @@
             tools:text="Lundi djskjskj sksjkjskjsd kkjsdkjskdjs skskdkjkjds kjskj sksjkjskjsd kkjsdkjskdjs skskdkjkjds kjskj sksjkjskjsd kkjsdkjskdjs skskdkjkjds"
             app:layout_constraintEnd_toStartOf="@id/owner_image"
             android:maxLines="2"
+            android:visibility="gone"
             android:layout_marginEnd="10dp"
             android:ellipsize="end"
             android:maxLength="200"
@@ -191,15 +193,15 @@
 
         <ImageButton
             android:id="@+id/select_date_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/ic_baseline_calendar_today_24"
             android:background="?attr/selectableItemBackgroundBorderless"
             app:layout_constraintStart_toStartOf="@id/owner_image"
             app:layout_constraintEnd_toEndOf="@id/owner_image"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toTopOf="@id/title"
             app:layout_constraintBottom_toTopOf="@id/view"/>
 
 
