--- a/app/src/main/res/layout/item_recipes_list_database.xml
+++ b/app/src/main/res/layout/item_recipes_list_database.xml
@@ -48,7 +48,7 @@
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image"
-            app:layout_constraintRight_toLeftOf="@id/fragment_recipes_list_item_matching"/>
+            app:layout_constraintRight_toLeftOf="@id/select_date_button"/>
 
 
         <TextView
@@ -72,7 +72,8 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:contentDescription="@string/recipe_list_item_image"
-            app:layout_constraintTop_toTopOf="@id/favorite_image"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/view"
             app:layout_constraintLeft_toLeftOf="@id/title"
             app:srcCompat="@drawable/ic_timer_black_24dp" />
 
@@ -81,9 +82,10 @@
             android:id="@+id/view"
             android:layout_width="0dp"
             android:layout_height="0.5dp"
-            android:layout_marginTop="15dp"
             android:background="@color/colorAccent"
-            app:layout_constraintTop_toBottomOf="@id/recipe_day_selected"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintBottom_toTopOf="@id/owner_image"
             app:layout_constraintLeft_toLeftOf="@id/title"
             app:layout_constraintRight_toRightOf="@id/title"
             />
@@ -95,10 +97,10 @@
             android:adjustViewBounds="true"
             android:background="@drawable/state_favorite"
             android:scaleType="fitCenter"
-            android:layout_marginTop="@dimen/default_margin"
             app:layout_constraintRight_toRightOf="@id/fragment_recipes_list_item_matching"
             app:layout_constraintLeft_toLeftOf="@id/fragment_recipes_list_item_matching"
-            app:layout_constraintTop_toTopOf="@id/view"
+            app:layout_constraintTop_toTopOf="@id/owner_image"
+            app:layout_constraintBottom_toBottomOf="@id/owner_image"
             app:srcCompat="@drawable/ic_favorite_not_selected_24dp"
             android:contentDescription="@string/description_image"/>
 
@@ -110,9 +112,10 @@
             android:scaleType="fitCenter"
             android:background="@drawable/shadow"
             android:elevation="2dp"
-            android:layout_marginTop="@dimen/default_margin"
-            app:layout_constraintRight_toRightOf="@id/view"
-            app:layout_constraintTop_toTopOf="@id/view"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintRight_toRightOf="@id/guideline"
+            app:layout_constraintTop_toTopOf="@id/fragment_recipes_list_item_preparation_time_text"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_recipes_list_dish_type"
             android:contentDescription="@string/description_image"/>
 
         <TextView
@@ -174,6 +177,7 @@
             android:maxLines="2"
             android:ellipsize="end"
             android:maxLength="70"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@id/owner_image"
             app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/title" />
@@ -199,7 +203,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             app:layout_constraintStart_toStartOf="@id/owner_image"
             app:layout_constraintEnd_toEndOf="@id/owner_image"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toTopOf="@id/title"
             app:layout_constraintBottom_toTopOf="@id/view"/>
 
 
