--- a/app/src/main/res/layout/fragment_my_ingredients_list.xml
+++ b/app/src/main/res/layout/fragment_my_ingredients_list.xml
@@ -41,6 +41,7 @@
         android:layout_marginBottom="40dp"
         android:rotation="200"
         android:scaleY="-1"
+        android:visibility="gone"
         app:srcCompat="@drawable/ic_turn"
         android:contentDescription="@string/description_image" />
 
@@ -60,6 +61,7 @@
         android:focusable="true"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="normal"
+        android:visibility="gone"
         app:layout_anchor="@id/recyclerview"
         app:layout_anchorGravity="bottom|right|end"
         app:srcCompat="@drawable/ic_add_ingredient_selected_24dp" />
