--- a/app/src/main/res/layout/item_ingredient_list_dialog.xml
+++ b/app/src/main/res/layout/item_ingredient_list_dialog.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginTop="15dp"
         android:gravity="center"
         android:text="@string/menu_bottom_ingredient_at_home"
         android:textColor="@color/colorAccent"
