--- a/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
+++ b/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
@@ -42,7 +42,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:maxLines="2"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:layout_marginTop="@dimen/default_margin"
             android:text="@string/recipe_list_item_label"
             android:textStyle="bold"
