--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_gravity="center"
-                android:text="V1.0.0"/>
+                tools:text="V1.0.0"/>
 
         </LinearLayout>
 
