--- a/app/src/main/res/layout/item_grocery.xml
+++ b/app/src/main/res/layout/item_grocery.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_grocery">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Type rayon"
+        tools:text="Type rayon"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:textSize="16sp"
