--- a/app/src/main/res/menu/popup_menu_social_media.xml
+++ b/app/src/main/res/menu/popup_menu_social_media.xml
@@ -6,12 +6,12 @@
     <item
         android:id="@+id/popupMenuUpdate"
         android:title="@string/popup_menu_update"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
     <item
         android:id="@+id/popupMenuDelete"
         android:title="@string/popup_menu_delete"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         />
 
 </menu>
