--- a/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
+++ b/app/src/main/res/layout/item_recipe_list_database_reduced_width.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/default_margin"
             android:padding="2dp"
-            android:text="@string/recipe_list_item_matching"
+            tools:text="100%"
             android:textStyle="bold"
             android:gravity="center"
             android:textSize="9sp"
